fix ui spacing stuff

--- a/src/App.css
+++ b/src/App.css
@@ -50,7 +50,7 @@
 }
 
 #hero{
-  padding: 80px 20px;
+  padding: 80px 0px;
 }
 
 @media (min-width: 768px) {
